content/docs/v2.33.7/entities/edge/edge-stackpayload.mdx
---
title: "edge.StackPayload"
---



```json
{
  "properties": {
    "alwaysCloneGitRepoForRelativePath": {
      "description": "AlwaysCloneGitRepoForRelativePath is a flag indicating if the agent must always clone the git repository for relative path.\nThis field is only valid when SupportRelativePath is true.\nUsed only for EE",
      "type": "boolean"
    },
    "deployerOptionsPayload": {
      "$ref": "#/components/schemas/edge.DeployerOptionsPayload"
    },
    "dirEntries": {
      "description": "Content of stack folder",
      "items": {
        "$ref": "#/components/schemas/filesystem.DirEntry"
      },
      "type": "array"
    },
    "edgeUpdateID": {
      "description": "EdgeUpdateID is the ID of the edge update related to this stack.\nUsed only for EE",
      "type": "integer"
    },
    "entryFileName": {
      "description": "Name of the stack entry file",
      "type": "string"
    },
    "envVars": {
      "description": "Used only for EE\nEnvVars is a list of environment variables to inject into the stack",
      "items": {
        "$ref": "#/components/schemas/portainer.Pair"
      },
      "type": "array"
    },
    "filesystemPath": {
      "description": "Mount point for relative path",
      "type": "string"
    },
    "id": {
      "description": "ID of the stack",
      "type": "integer"
    },
    "name": {
      "description": "Name of the stack",
      "type": "string"
    },
    "namespace": {
      "description": "Namespace to use for kubernetes stack. Keep empty to use the manifest namespace.",
      "type": "string"
    },
    "prePullImage": {
      "description": "PrePullImage is a flag indicating if the agent must pull the image before deploying the stack.\nUsed only for EE",
      "type": "boolean"
    },
    "rePullImage": {
      "description": "RePullImage is a flag indicating if the agent must pull the image if it is already present on the node.\nUsed only for EE",
      "type": "boolean"
    },
    "readyRePullImage": {
      "description": "Used only for EE async edge agent\nReadyRePullImage is a flag to indicate whether the auto update is trigger to re-pull image",
      "type": "boolean"
    },
    "registryCredentials": {
      "description": "RegistryCredentials holds the credentials for a Docker registry.\nUsed only for EE",
      "items": {
        "$ref": "#/components/schemas/edge.RegistryCredentials"
      },
      "type": "array"
    },
    "retryDeploy": {
      "description": "RetryDeploy is a flag indicating if the agent must retry to deploy the stack if it fails.\nUsed only for EE",
      "type": "boolean"
    },
    "retryPeriod": {
      "description": "RetryPeriod specifies the duration, in seconds, for which the agent should continue attempting to deploy the stack after a failure\nUsed only for EE",
      "type": "integer"
    },
    "rollbackTo": {
      "description": "RollbackTo specifies the stack file version to rollback to (only support to rollback to the last version currently)",
      "type": "integer"
    },
    "stackFileContent": {
      "description": "Content of the stack file (for compatibility to agent version less than 2.19.0)",
      "type": "string"
    },
    "supportRelativePath": {
      "description": "Is relative path supported",
      "type": "boolean"
    },
    "version": {
      "description": "Version of the stack file",
      "type": "integer"
    }
  },
  "type": "object"
}
```
